# Pac.Man

./: .gitignore  CMakeLists.txt  EATEN_STATE_CLEANUP.md  FRIGHTENED_MODE_SUMMARY.md  GHOST_SYSTEM_DOCUMENTATION.md  OOP_ANALYSIS.md  POWER_UP_FRIGHTENED_MODE.md  README.md  architecture_diagram.puml  class_diagram.puml  ghost_architecture_scientific.puml  ghost_state_machine.puml  main.cpp  power_up_sequence.puml
.devcontainer/: devcontainer.json
assets/: Scoreboard.txt
include/: BlueGhost.h  Entity.h  Game.h  Ghost.h  Ghostbase.h  GreenGhost.h  Leaderboard.h  Map.h  Menu.h  PacMan.h  PinkGhost.h  RedGhost.h  constants.h
source/: BlueGhost.cpp  Entity.cpp  Game.cpp  Ghost.cpp  Ghostbase.cpp  GreenGhost.cpp  Leaderboard.cpp  Map.cpp  Menu.cpp  PacMan.cpp  PinkGhost.cpp  RedGhost.cpp
